--- a/style.css
+++ b/style.css
@@ -1,54 +1,174 @@
 body{
-  background: rgb(245,245,245);
-  color: green;
-  font-size: 25px;
-  font-family: Helvetica;
-}
-h1{
-  font-family: Courier;
-  color: red;
-  font-weight: lighter;
-  font-size: 10px;
-}
-h2 {
-  font-family: Courier;
-  color: pink;
-  font-weight: lighter;
-  font-size: 8px;
-}
-a {
-  color: yellow;
-}
-a:hover {
-  text-decoration: none;
-  color: purple;
+	margin: 0;
 }
 
-#banner{
-  text-align: center;
-  background-image: url("https://unsplash.it/1300/600?random");
-  background-size: cover;
-  padding: 150px;
-  color: white;
-  text-shadow: 1px 1px 5px black;
-}
-#banner h1 {
-  color: white;
-  font-size: 50px;
-}
-#banner p {
-  color: white;
-  opacity: 0.8;
-  font-size: 30px;
-  font-weight: lighter;
-}
-#footer{
-  padding: 30px;
-  background: rgb(30, 30, 30);
-  color: lightgrey;
-}
-.card{
-  padding: 50px;
-  font-weight: lighter;
+a{
+	text-decoration: none;
 }
 
+header{
+	color: black;
+	text-align: center;
+	background-image: url("./img/banner.png");
+	background-size: cover;
+	margin-bottom: 10px;
+	padding: 200px;
+	box-shadow: 0px 5px 3px grey;
+}
+
+header div{
+	background: rgba(255,255,255,0.5);
+	padding: 25px;
+	margin: auto;
+	font-family: "Courier", sans-serif;
+}
+
+header p{
+	font-size: 25px;
+	opacity: 0.8;
+}
+
+.boardbutton{
+	width: 500px;
+	height: 200px;
+	margin: auto;
+	line-height: 200px;
+	text-align: center;
+}
+
+.boardbutton a > div{
+	position: relative;
+	left: 0;
+	background-image: url('./img/board.png');
+	transition: left 0.3s;
+}
+
+.boardbutton a > div:hover{
+	left: 100px;
+}
+
+.boardbutton h2{
+	font-size: 50px;
+	color: black;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
+
+.boardbutton h2 strong{
+	color: red;
+}
+
+.boardbutton p{
+	font-size: 25px;
+	-webkit-transition: -webkit-transform 0.3s;
+	   -moz-transition:    -moz-transform 0.3s;
+	    -ms-transition:     -ms-transform 0.3s;
+	     -o-transition:      -o-transform 0.3s;
+	        transition:         transform 0.3s;
+	        color: black
+}
+
+.boardbutton:hover  p{
+	-webkit-transform: scale(1.5);
+	   -moz-transform: scale(1.5);
+	    -ms-transform: scale(1.5);
+	     -o-transform: scale(1.5);
+	        transform: scale(1.5);
+}
+
+section{
+	width: 100%;
+	height: 800px;
+	color: white;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+section > div{
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 800px) {
+	section > div{
+		width: 100%;
+	}
+}
+
+@media (min-width: 800px) {
+	section > div{
+		width: 50%;
+	}
+}
+
+section:nth-child(even) > div{
+	float: right;
+}
+
+section:nth-child(odd) > div{
+	float: left;
+}
+
+section > div > div{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	padding: 50px;
+	transform: translate(-50%, -50%);
+}
+
+section h2{
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size: 40px;
+	text-align: center;
+	text-transform : uppercase;
+}
+
+section p{
+	font-family: "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", "Luxi Sans", sans-serif;
+	font-size: 16px;
+	text-align: justify;
+}
+
+#import{
+	text-align: center;
+	margin-top: 50px;
+}
+
+#form{
+	width: 100%;
+	height: 455px;
+	padding: 50px 0 20px 0;
+}
+
+#form div{
+	max-width: 800px;
+	margin: auto;
+}
+
+footer{
+	text-align: center;
+}
+
+footer li{
+	display: inline;
+	font-size: 25px;
+	padding: 0 10px;
+}
+
+footer a{
+	color: black;
+	-webkit-transition: -webkit-transform 0.3s;
+	   -moz-transition:    -moz-transform 0.3s;
+	    -ms-transition:     -ms-transform 0.3s;
+	     -o-transition:      -o-transform 0.3s;
+	        transition:         transform 0.3s;
+}
+
+footer a:hover{
+	-webkit-transform: scale(1.5);
+	   -moz-transform: scale(1.5);
+	    -ms-transform: scale(1.5);
+	     -o-transform: scale(1.5);
+	        transform: scale(1.5);
+}
